# nft-art-gallery

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
app/: main.py
app/blockchain/: contracts.py  utils.py  wallet.py
app/db/: crud.py
app/dependencies/: __init__.py  auth.py
app/models/: art.py  orm.py  schemas.py
app/templates/: about.html  base.html  gallery.html  index.html
assets/: 01_diagram.puml
truffle/contracts/: ArtGallery
truffle/migrations/: 2_deploy_contracts.js
